--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -9,7 +9,7 @@
     background-repeat: no-repeat;
     /* background-size: cover; */
     background: rgb(2,0,36);
-    background: linear-gradient(277deg, rgba(2,0,36,1) 0%, rgba(127,149,248,1) 0%, rgba(149,137,248,1) 100%); 
+    background: linear-gradient(277deg, var(--purple2) 0%, var(--purple1) 100%); 
 
 }
 
